# nektsrs

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: black_formatter.yml
nektsrs/: __init__.py  chunks.py  gll.py
nektsrs/grid/: __init__.py  grid1d.py  grid2d.py
nektsrs/interpolator/: __init__.py  interpolator1d.py  interpolator2d.py
nektsrs/io/: __init__.py  file_combiner.py  header.py  helpers.py  reader.py  time_series.py  writer.py
tests/data/: test.f00001
tests/test_grid/: test_grid1d.py  test_grid2d.py
tests/test_interpolator/: test_interpolator1d.py  test_interpolator2d.py
tests/test_io/: test_file_combiner.py  test_reader.py  test_time_series.py
