[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nektsrs"
version = "0.0.1"
dependencies = [
    "numpy",
    "h5py",
    "scipy",
    "pre-commit"
]

[project.scripts]
nektsrs_inspect = "nektsrs.bin.inspect:main"
nektsrs_interpolate = "nektsrs.bin.interpolate:main"
nektsrs_to_hdf5 = "nektsrs.bin.points_to_hdf5:main"

[tool.black]
line-length = 79
inlcude = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
